corrected mytab spacing

--- a/scss/list-review.scss
+++ b/scss/list-review.scss
@@ -96,7 +96,7 @@ main{
     #myTab{
         a{
             color: white;
-            margin: 3px 3px 0 3px;
+            margin: 3px 0 0 3px;
             &:hover{
                 background-color: $third-color;
                 color: $first-color;
@@ -169,5 +169,12 @@ main{
 @media (max-width: $small){
     .post-img{
         height: 300px;
+    }
+    .product{
+        #myTab{
+            a{
+                margin-right: 3px;
+            }
+        }
     }
 }
